--- a/app/Resources/views/includes/button_on_side.html.twig
+++ b/app/Resources/views/includes/button_on_side.html.twig
@@ -4,7 +4,7 @@
 
 <div class="
 	{% if route == "lbf_main_homepage" %}
-		hidden-sm hidden-xs
+		hidden-xs
 	{% else %}
 		hidden-lg hidden-md hidden-sm hidden-xs
 	{% endif %}
