--- a/src/LBF/MainBundle/Resources/views/Main/order.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/order.html.twig
@@ -86,14 +86,16 @@
 				        				<br/>
 				        				<br class="hidden-xs"/>
 				        				<div class="address_box">
-				        					<span style="font-size:1.2em;">
+				        					<span style="font-size:1.2em; font-weight: 500;">
 					        					<strong>Le Buffet Francés</strong> 
 				        					</span>
 				        					<br/>
-				        					<span style="font-size:0.9em;">
+				        					<span style="font-size:0.9em; font-weight: 200;">
 						        				Avenida Las Sauces <br/>
-						        				Larapa - San Sebastian - Cusco <br/>
-					        					Perú
+						        				Larapa, San Sebastian, Cusco <br/>
+								                <strong>
+								                  Perú
+								                </strong>
 				        					</span>
 				        				</div>
 				        			</li>
