--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -662,7 +662,7 @@ textarea {
 #social_media {	
 	position:fixed;
 	color: rgba(41,41,41,0.95);
-	top: 40%;
+	top: 43%;
 	border: 1px solid rgba(41,41,41,0.95);
 	border-radius: 0;
 	box-shadow: 0 0 10px 4px rgba(41,41,41,0.3);
@@ -680,21 +680,21 @@ textarea {
 @media (min-width: 1401px) {
 	#social_media {
 		left: -100.5px;
-		font-size: 1.2em;
+		font-size: 1.1em;
 	}
 	.social_label {
 		width: 100px;
 	}
 	.social_icon {
-		width: 40px;
+		width: 36px;
 	}
 	.social_item, .social_item_spe {
-		width: 140px;
-		height: 40px;
+		width: 136px;
+		height: 36px;
 	}
 	.social_label, .social_icon {
-		padding: 10px !important;
-		height: 40px;	
+		padding: 8px !important;
+		height: 36px;	
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
@@ -868,7 +868,7 @@ textarea {
 #side_buttons {
 	position: fixed;
 	right: 22px;
-	top: 43%;
+	top: 42%;
 	width: 12px;
 	z-index: 10100;
 }
@@ -876,7 +876,7 @@ textarea {
 	width: 10px !important;
 	height: 10px !important;
 	border-radius: 5px !important;
-	margin: 4px 0 !important;
+	margin: 1px 0 !important;
 	padding: 0;
 	background-color: transparent;
 	border: 1px solid rgba(41,41,41,0.95);
@@ -1210,6 +1210,10 @@ a.captionOrange:hover
 .modal-backdrop {
   z-index: -1;
 }
+.modal-body, .modal-body-inner {
+    /*max-height:500px;*/
+    overflow:auto;
+}
 body.modal-open {
 	overflow: hidden;
 }
@@ -1227,7 +1231,6 @@ body.modal-open {
 	background-color: rgba(250,250,250,0.4);
 	color: white;
 }
-
 
 .nav-tabs {
 	margin-top: 0 !important;
@@ -2119,4 +2122,47 @@ textarea {
 	padding: 0px !important;
 	margin: 10px 0 !important;
 	border-bottom: 1px dotted white;
+}
+.btn-footer, .btn-footer:focus {
+	outline:none;
+	margin: 10px !important;
+
+	background-color: transparent;
+	/*border: 1px solid white;*/
+	border-radius: 0;
+	border-bottom: 1.5px solid transparent;
+	border-top: 1.5px solid transparent;
+	box-shadow: none;
+	color: inherit;
+}
+.btn-footer:hover {
+	background-color: transparent;
+	color: inherit;
+	border-bottom: 1.5px solid white;
+	border-top: 1.5px solid white;
+	box-shadow: none;
+}
+@media (min-width: 1401px) {
+	.btn-footer {
+		padding: 5px 9px; 
+		font-size: 1em;
+	}
+}
+@media (min-width: 993px) and (max-width: 1400px){
+	.btn-footer {
+		padding: 4px 7px; 
+		font-size: 0.75em;
+	}
+}
+@media (min-width: 479px) and (max-width: 993px){
+	.btn-footer {
+		padding: 3px 5px; 
+		font-size: 0.58em;
+	}
+}
+@media (max-width: 478px){
+	.btn-footer {
+		padding: 3px 5px; 
+		font-size: 1.2em;
+	}
 }
